added button group

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -224,7 +224,7 @@ Common-law partner </summary>refers to a person who is not your spouse, but with
 		 <li><h3><mark>Fill out</mark>
         Part B  – Alberta non-refundable tax credits</h3>
          <p>The eligibility conditions and rules for claiming most Alberta <span class="nowrap">non-refundable</span> tax credits are the same as those for the federal <span class="nowrap">non-refundable</span> tax credits. However, the amount and calculation of most Alberta <span class="nowrap">non-refundable</span> tax credits are different from the corresponding federal credits.</p>
-         <details><summary class="wb-toggle" data-toggle='{"print": "on"}'><mark>If you are a newcomer to Canada and emigrant</mark></summary>
+         <details class="mrgn-bttm-lg"><summary class="wb-toggle" data-toggle='{"print": "on"}'><mark>If you are a newcomer to Canada and emigrant</mark></summary>
 		
          <p>As a newcomer or an emigrant, you may be limited in the amount you can claim for certain provincial <span class="nowrap">non-refundable</span> tax credits.</p>
          <p>If you reduced your claim for any of the following federal amounts, you also need to reduce your claim for the corresponding provincial amount in the same manner:</p>
@@ -278,7 +278,15 @@ Common-law partner </summary>refers to a person who is not your spouse, but with
          <p>For examples on how to calculate these amounts, see <a href="/en/revenue-agency/services/forms-publications/publications/t4055.html"><span class="nowrap">Guide T4055</span>, Newcomers to Canada</a>.</p>
 		 </details>
 		 <h4>Line numbers</h4>
-		 <ul class="list-unstyled">
+		   <section class="mrgn-tp-md" id="details-elements">
+			
+		 <div class="btn-group mrgn-bttm-md">
+            <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
+               &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;on&quot;}" type="button">Expand all</button>
+            <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
+               &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
+            </div>
+		<ul class="list-unstyled">
 		
          <li><details>
             <summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 58120 – Spouse or common-law partner amount</summary>
@@ -512,7 +520,8 @@ Common-law partner </summary>refers to a person who is not your spouse, but with
          </details></li>
 		 </ul>
 		  </li>
-		  </ol>
+		</ul>
+		  </section>
 				 <h2 id="h-5">Send CRA the tax return</h2>
 				 <p><mark>You can file your completed tax return with the Canada Revenue Agency (CRA) online or by mail.</mark></p>
 <p><mark>Refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/sending-a-tax-return.html">Send us your tax return</a></mark></p>
