added placeholder text

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -201,6 +201,7 @@ Common-law partner </summary>refers to a person who is not your spouse, but with
 				 <h2 id="h-4">Complete the forms</h2>
 				    <ol class="lst-stps ld-zr">
 		<li><h3><mark>Fill out</mark>Part A – Alberta tax on taxable income</h3>
+		 <p>(put a lead in statement here)</p>
 		<ol class="lst-stps-sub">
 		 <li><mark>Enter your taxable income from line 26000 of your federal tax return.</mark></li>
 		 <li><mark>Determine your taxable income by using the tax rate</mark>
@@ -222,6 +223,7 @@ Common-law partner </summary>refers to a person who is not your spouse, but with
 		 </ol>
 		 </li>
 		 <li><h3><mark>Fill out</mark>
+		  
         Part B  – Alberta non-refundable tax credits</h3>
          <p>The eligibility conditions and rules for claiming most Alberta <span class="nowrap">non-refundable</span> tax credits are the same as those for the federal <span class="nowrap">non-refundable</span> tax credits. However, the amount and calculation of most Alberta <span class="nowrap">non-refundable</span> tax credits are different from the corresponding federal credits.</p>
          <details class="mrgn-bttm-lg"><summary class="wb-toggle" data-toggle='{"print": "on"}'><mark>If you are a newcomer to Canada and emigrant</mark></summary>
@@ -459,6 +461,7 @@ Common-law partner </summary>refers to a person who is not your spouse, but with
 		 </li>
 		<li><h3><mark>Fill out</mark>
        Part C – Alberta tax</h3>
+	   <p>(put a lead in statement here)</p>
 		 <ul class="list-unstyled">
          <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 53 – Alberta tax on split income</summary>
          <p>If you are reporting federal tax on split income on <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-g/income-tax-benefit-guide-federal-non-refundable-tax-credits.html#Line424">line 40424</a></span> of your return,<span class="nowrap"> complete</span> <span class="nowrap">Part 3</span> of <a href="/en/revenue-agency/services/forms-publications/forms/t1206.html"><span class="nowrap">Form T1206</span>, Tax on Split Income</a>, to calculate the Alberta tax to enter on <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-g/income-tax-benefit-guide-federal-non-refundable-tax-credits.html#Line42800">line 42800</a></span> of your return.</p>
@@ -505,6 +508,7 @@ Common-law partner </summary>refers to a person who is not your spouse, but with
 		 </ul>
 		</li>
 		<li><h3><mark>Fill out</mark> Part D – Alberta credits</h3>
+		 <p>(put a lead in statement here)</p>
 		 <ul class="list-unstyled">
          <li><details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Line 67 – Unused Alberta investor tax credit</summary>
          <p>You can claim your unused Alberta investor tax credit amounts from investments made <span class="nowrap">in 2019</span> or earlier in the following four tax years, up to a maximum <span class="nowrap">of $60,000</span> per tax year.</p>
