--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -103,7 +103,7 @@
 			  </ul>
 			   <h2 id="h-1">What's new</h2>
 			   <p><mark>For 2022:</mark></p>
-	<ul><li>The personal income levels and most provincial <span class="nowrap">non-refundable</span> tax credit amounts have changed.  <mark>Changes are indicated with the <span class="label label-info">Updated amount for 2022</span> label below.</li>
+	<ul><li>The personal income levels and most provincial <span class="nowrap">non-refundable</span> tax credit amounts have changed.  </li>
 <li>Contributions to nomination contestants made after <span class="nowrap">March&nbsp;30, 2022</span> will no longer qualify for the political contributions tax credit</li>
 </ul>
    <h2 id="h-2">File on time to receive benefits on time</h2>
@@ -121,15 +121,15 @@
 				<h3>Options</h3>
 	<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   <li class="cnjnctn-col">
-    <h4 class="mrgn-tp-sm text-muted"><mark>Using certified software<span class="wb-inv">: Option 1</span></mark></h4>
-    <p><mark>Forms are automatically generated for you if you use <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/netfile-overview/certified-software-netfile-program.html">certified tax software</a></mark></p>
+    <h4 class="mrgn-tp-sm text-muted"><mark><span class="fas fa-laptop"></span> Using certified software<span class="wb-inv">: Option 1</span></mark></h4>
+    <p><mark>Forms are automatically generated for you when you use <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/netfile-overview/certified-software-netfile-program.html">certified tax software</a></mark></p>
   </li>
   <li class="cnjnctn-col">
-    <h4 class="mrgn-tp-sm text-muted"><mark>Using paper forms<span class="wb-inv">: Option 2</span></mark></h4>
-    <p>You can download and print a the appropriate form <del>copy of <a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-c.html"><span class="nowrap">Form AB428</span>, Alberta Tax and Credits</a> to calculate your Alberta tax and credits. Attach a completed copy of <span class="nowrap">Form AB428</span> to your return.</del></p>
+    <h4 class="mrgn-tp-sm text-muted"><mark><span class="fas fa-print"></span> Using paper forms<span class="wb-inv">: Option 2</span></mark></h4>
+    <p>You can download and print a the appropriate form</p>
   </li>
   <li class="cnjnctn-col">
-    <h4 class="mrgn-tp-sm text-muted"><mark>Other options<span class="wb-inv">: Option 3</span></mark></h4>
+    <h4 class="mrgn-tp-sm text-muted"><mark><span class="fas fa-plus"></span> Other options<span class="wb-inv">: Option 3</span></mark></h4>
     <p><mark>Refer to: <a href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes/ways.html">Ways to do your taxes</a></mark></li>
                 </li>          
                         </ul>
