read text - affected

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1026,7 +1026,7 @@ html:lang(fr) .cnjnctn-or:before {
                   <li>A Canadian corporation whose shares are not listed on a Canadian stock exchange designated for Canadian income tax purposes</li>
                   <li>A Canadian corporation without share capital</li>
                 </ul>      
-		    <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156">Affected owners</a></p>
+		    <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">Affected owners</a></p>
               
             </div>
 		  <br>
