--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -907,7 +907,7 @@ html:lang(fr) .cnjnctn-or:before {
                 You are an excluded owner</h4>
               <p>You have <strong>no obligations</strong> under the Underused Housing Tax Act. </p>
               <p>You do not have to file a return or pay the tax unless your situation changes by December 31 of the calendar year.</p>
-		    <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681155">Excluded owners</a></p>
+		    <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681155" target="_blank">Excluded owners</a></p>
             </div>
           </div>
           <div id="unsure-owner" tabindex="0" class="hidden">
@@ -926,7 +926,7 @@ html:lang(fr) .cnjnctn-or:before {
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for <strong>each</strong> residential property that you own in Canada on December 31. </p>
 			<p>You will also have to pay the tax unless you qualify for an exemption.</p>
-	  <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156">Affected owners</a></p>
+	  <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">Affected owners</a></p>
                 
                 </div>
 		      <br>
