--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1058,7 +1058,7 @@ html:lang(fr) .cnjnctn-or:before {
                 </ul>
 		    <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681155" target="_blank">Excluded owners</a></p>
 
-         <h3 id="h_1_3">Exemption eligibility</h3>
+         <h3 id="h_1_3">Exemption eligibility for affected owners</h3>
 <p>If you are an affected owner on December 31 you <strong>must file</strong> an Underused Housing Tax return for the calendar year, <strong>even if</strong> you qualify for an exemption.</p>
 <p>You <strong>may be exempt</strong> from <strong>paying</strong> the Underused Housing Tax for a <strong>calendar year</strong> depending on the:</p>
         
