width or pattern

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1011,7 +1011,7 @@ html:lang(fr) .cnjnctn-or:before {
 
 
   <ul class="cnjnctn-type-or cnjnctn-sm">
-      <li class="cnjnctn-col">
+      <li class="cnjnctn-col-50">
         <p>An affected owner</p>
       </li>
       <li class="cnjnctn-col">
