bullets instead or

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1008,16 +1008,11 @@ html:lang(fr) .cnjnctn-or:before {
           <h3 id="h_1_2">Types of owners</h3>
 
  <p>There are 2 types of owners for the purposes of the Underused Housing Tax:</p>
+<ul>
+<li>Affected owner</li>
+	<li>Excluded owner</li>
+</ul>
 
-
-  <ul class="cnjnctn-type-or cnjnctn-sm">
-      <li class="cnjnctn-col-50">
-        <p>An affected owner</p>
-      </li>
-      <li class="cnjnctn-col">
-        <p>An excluded owner</p>
-      </li>
-  </ul>
 
 
       
