--- a/fhsa/v4/index.html
+++ b/fhsa/v4/index.html
@@ -111,7 +111,7 @@
 	    </div>
 	  <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href=definitions.html"">Definitions for FHSAs</a></h3>
+          <h3><a href="definitions.html">Definitions for FHSAs</a></h3>
         </section>	    
 	    </div>
    </section> 
