--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -271,8 +271,8 @@
             </ul>
 
             <h2 id="h-1">Who can open an FHSA</h2>
-            <p>To open an FHSA, you must be a qualifying individual.</p>
-            <p>You are a qualifying individual if you meet <strong>all</strong> of the following requirements at the time the account is opened:</p>
+            <p>To open an FHSA, you must be a qualifying individual by meeting the criteria below.</p>
+            <p>You must meet <strong>all</strong> of the following requirements when you open your account:</p>
  <section class="gc-nav-section experimental provisional">
 	  
  <section>
