--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -381,7 +381,7 @@
 
                                     </li>
                                     <li class="cnjnctn-col">
-                                       in the previous 4 calendar years </li></ul>
+                                       in the previous 4 calendar years </li></ul></ul>
 
  
 
