--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -262,7 +262,7 @@
 	
 
 </div>
-            <h2 class="h3">On this page</h2>
+            <h2>On this page</h2>
             <ul>
                <li><a href="#h-1">Who can open an FHSA</a></li>
                <li><a href="#h-2">How to open an FHSA</a></li>
