--- a/fhsa/v4/toomuch.html
+++ b/fhsa/v4/toomuch.html
@@ -65,7 +65,7 @@
 	
 
 
-            <h2 class="h3">On this page</h2>
+            <h2>On this page</h2>
             <ul>
                <li><a href="#h-1">What is an excess FHSA amount</a></li>
                <li><a href="#h-2">Tax on excess FHSA amounts</a></li>
