--- a/fhsa/v4/close.html
+++ b/fhsa/v4/close.html
@@ -62,7 +62,7 @@
            
 		                  
 
-              <h2 class="h3">On this page</h2>
+              <h2>On this page</h2>
             <ul>
                <li><a href="#h-1">When to close an FHSA</a></li>
                <li><a href="#h-2">When your FHSA is considered closed</a></li>
