--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -278,7 +278,7 @@ Income tax rates for individuals</h1>
 
 
 
-    <div data-wb-jsonmanager="{&quot;url&quot;: &quot;/api/assets/cra-arc/content-fragments/income-tax-rates.json#/properties/elements&quot;, &quot;name&quot;: &quot;income-tax-rates&quot;}"></div>
+    <div data-wb-jsonmanager="{&quot;url&quot;: &quot; https://www.canada.ca/api/assets/cra-arc/content-fragments/income-tax-rates.json#/properties/elements&quot;, &quot;name&quot;: &quot;income-tax-rates&quot;}"></div>
 
 
 </div>
@@ -1375,9 +1375,9 @@ Income tax rates for individuals</h1>
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script src="/etc/designs/canada/wet-boew/js/ep-pp.min.js"></script>
-<script src="/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script>
-<script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/ep-pp.min.js"></script>
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script>
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 
 
 
