--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -301,7 +301,7 @@ Income tax rates for individuals</h1>
     
 
     <nav role="navigation">
-        <h2>On this page</h2>
+        <h2 class="h3">On this page</h2>
 
         <ul>
             
