--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -612,7 +612,57 @@ Income tax rates for individuals</h1>
     
 
      <h2>Tax rates for previous years</h2>
+<p>[Select the tax year, then select the province or territory where you resided on December 31.]</p>
 
+
+<details>
+	<summary>2022</summary>
+	<p>[Content]</p>
+</details>
+
+<details>
+	<summary>2021</summary>
+	<p>[Content]</p>
+</details>
+<details>
+	<summary>2020</summary>
+	<p>[Content]</p>
+</details>
+
+<details>
+	<summary>2019</summary>
+	<p>[Content]</p>
+</details>
+<details>
+	<summary>2018</summary>
+	<p>[Content]</p>
+</details>
+<details>
+	<summary>2017</summary>
+	<p>[Content]</p>
+</details>
+<details>
+	<summary>2016</summary>
+	<p>[Content]</p>
+</details>
+<details>
+	<summary>2015</summary>
+	<p>[Content]</p>
+</details>
+<details>
+	<summary>2014</summary>
+	<p>[Content]</p>
+</details>
+<details>
+	<summary>2013</summary>
+	<p>[Content]</p>
+</details>
+
+
+
+
+
+	
 </div>
 <div class="mwsgeneric-base-html parbase section">
 
