--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -536,11 +536,15 @@ Income tax rates for individuals</h1>
 
 
 </div>
-<div class="mwsbodytext text parbase section">
+<h2>Calculate the tax</h2>
+	<p>Federal taxes and provincial and territorial taxes (except Quebec) are calculated the same way.</p>	
+		<p>Form 428 within your respective province or territory’s <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years.html">Income Tax Package</a>, is used to calculate your provincial or territorial tax. Provincial or territorial non-refundable tax credits are also calculated on Form 428</p>
+		
+		<div class="mwsbodytext text parbase section">
     
 
      <h2>Tax rates for previous years</h2>
-<p>[Select the tax year, then select the province or territory where you resided on December 31.]</p>
+<p>[Select the tax year to see the federal rate. Then select the province or territory to see its corresponding rate.]</p>
 
 
 <details>
