--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -561,7 +561,7 @@ Income tax rates for individuals</h1>
 <div class="mwsaccordion-html section">
          
  <ul class="list-unstyled" id="details-elements-86397">
-
+<h3>Provincial and territorial income tax rates for 2022</h3>
 
     <li>
                 <details>
