testing drop down

--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -563,6 +563,38 @@ Income tax rates for individuals</h1>
  <ul class="list-unstyled" id="details-elements-86397">
 <h3>Provincial and territorial rates</h3>
 
+<div class="wb-fieldflow" data-wb-fieldflow="{&quot;inline&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;}">
+                        <p class="wb-inv">Choose your location:</p>
+                        <ul>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-alberta.html">Alberta</a></li>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-british-columbia.html">British Columbia</a></li>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-manitoba.html">Manitoba</a></li>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-new-brunswick.html">New Brunswick</a></li>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-newfoundland-labrador.html">Newfoundland and Labrador</a></li>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/northwest-territories.html">Northwest Territories</a></li>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-nova-scotia.html">Nova Scotia</a></li>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/nunavut.html">Nunavut</a></li>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-ontario.html">Ontario</a></li>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-prince-edward-island.html">Prince Edward Island</a></li>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-quebec.html">Quebec</a></li>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-saskatchewan.html">Saskatchewan</a></li>
+                            <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/yukon.html">Yukon</a></li>
+                        </ul>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+	
+
     <li>
                 <details>
                     <summary>Alberta</summary>
