--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -233,10 +233,10 @@
     </div></div>
 	
 		<nav id="wb-bc" property="breadcrumb"><h2 class="wb-inv">You are here:</h2><div class="container"><ol class="breadcrumb">
-<li><a href='/en.html'>Canada.ca</a></li>
-<li><a href='/en/services/taxes.html'>Taxes</a></li>
-<li><a href='/en/services/taxes/income-tax.html'>Income tax</a></li>
-<li><a href='/en/services/taxes/income-tax/personal-income-tax.html'>Personal income tax</a></li>
+<li><a href="https://canada.ca/en.html">Canada.ca</a></li>
+<li><a href="https://canada.ca/en/services/taxes.html">Taxes</a></li>
+<li><a href="https://canada.ca/en/services/taxes/income-tax.html">Income tax</a></li>
+<li><a href="https://canada.ca/en/services/taxes/income-tax/personal-income-tax.html">Personal income tax</a></li>
 </ol></div></nav>
 
 
@@ -376,7 +376,7 @@ Income tax rates for individuals</h1>
 <div class="wb-fieldflow" data-wb-fieldflow="{&quot;inline&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;}">
                         <p class="wb-inv">Choose your location:</p>
                         <ul>
-                            <li><a href="#[income-tax-rates]/alberta/variations/2022/value">Alberta</a></li>
+                            <li><a href= data-json-replace="#[income-tax-rates]/alberta/variations/2022/value">Alberta</a></li>
                             <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-british-columbia.html">British Columbia</a></li>
                             <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-manitoba.html">Manitoba</a></li>
                             <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-new-brunswick.html">New Brunswick</a></li>
