--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -376,7 +376,12 @@ Income tax rates for individuals</h1>
 <div class="wb-fieldflow" data-wb-fieldflow="{&quot;inline&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;}">
                         <p class="wb-inv">Choose your location:</p>
                         <ul>
-                            <li> <div data-json-replace="#[income-tax-rates]/alberta/variations/2023/value"></div></li>
+                            <li>Alberta
+<div class="mwsgeneric-base-html parbase section">
+    <div data-json-replace="#[income-tax-rates]/alberta/variations/2023/value"></div>
+</div>
+</li>
+				
                             <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-british-columbia.html">British Columbia</a></li>
                             <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-manitoba.html">Manitoba</a></li>
                             <li><a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-new-brunswick.html">New Brunswick</a></li>
