--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -586,7 +586,26 @@ There are also various tax credits, deductions and benefits available to you to 
 <p>You should calculate the federal tax first, then calculate your provincial or territorial tax second. By adding these 2 amounts together, you will get your <strong>combined tax rate</strong>.</p>
 
 
-
+		
+<p>To calculate what you owe:</p>
+		 <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
+      <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Value of the property</span></li>
+      <li><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Underused Housing Tax rate (1%)</span> </li>
+      <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Your ownership percentage</span></li>
+      <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">Underused Housing Tax amount owed</span><span class="fa-stack text-success pull-right"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
+    </ul>
+    <details>
+    <summary>Calculation example</summary>
+    <p>In 2023, the value of the residential property is $500,000. You are 1 of 2 owners, who equally share ownership as indicated in the land registration system.</p>
+   <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
+      <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$500,000 (Value of the property)</span></li>
+      <li><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">1% (Underused Housing Tax rate)</span> </li>
+      <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">50% (Your ownership percentage)</span></li>
+      <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$2,000 (Underused Housing Tax amount owed for 2023)</span></li>
+    </ul>
+    </details>
+		
+	
 
 
 		
