--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -581,9 +581,11 @@ There are also various tax credits, deductions and benefits available to you to 
 </div>
 <h2 id="toc3">Calculate the tax</h2>
 	<p>Federal taxes and provincial and territorial taxes (except Quebec) are calculated the same way.</p>	
-		<p>Form 428 within your respective province or territory’s <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years.html">Income Tax Package</a>, is used to calculate your provincial or territorial tax. Provincial or territorial non-refundable tax credits are also calculated on Form 428</p>
-
-<p>You should calculate the federal tax first, then calculate your provincial or territorial tax second. By adding these 2 amounts together, you will get your <strong>combined tax rate</strong>.</p>
+		<p>Step 5 of the Income Tax and Benefit Return is where to calculate your federal tax on taxable income. Federal non-refundable tax credits are also calculated on this return.</p>
+		<p>Form 428 within your respective province or territory’s income tax package, is used to calculate your provincial or territorial tax. Provincial or territorial non-refundable tax credits are also calculated on Form 428.</p>
+<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">T1 Income tax packages</a></p>
+		<br>
+<p>You should calculate the federal tax first, then calculate your provincial or territorial tax. By adding these 2 amounts together, you will get your <strong>combined tax rate</strong>.</p>
 
 
 		
