--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -363,7 +363,7 @@ There are also various tax credits, deductions and benefits available to you to 
 
     <div data-json-replace="#[income-tax-rates]/federalRates/variations/2023/value">
 </div>
-<p>See <a href="/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html">how amounts are adjusted for inflation</a>.</p>
+<p>See <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html">how amounts are adjusted for inflation</a>.</p>
 
 </div>
 	
