--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -589,11 +589,21 @@ Income tax rates for individuals</h1>
 		
 <p>To calculate what you owe:</p>
 		 <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
-      <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Value of the property</span></li>
-      <li><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Underused Housing Tax rate (1%)</span> </li>
-      <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Your ownership percentage</span></li>
-      <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">Underused Housing Tax amount owed</span><span class="fa-stack text-success pull-right"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
-    </ul>
+      <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Taxable income</span></li>
+      <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-minus fa-lg"></span><span class="wb-inv">minus </span></span><span class="text-muted h5">Base amount</span> </li>
+<li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
+			 
+      <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Tax rate</span></li>
+      <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
+    
+		 <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-plus fa-lg"></span><span class="wb-inv">plus </span></span><span class="text-muted h5">Tax</span> </li>
+		 
+ <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">Tax amount owed</span><span class="fa-stack text-success pull-right"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
+		 
+		 
+		 
+		 
+		 </ul>
     <details>
     <summary>Calculation example</summary>
     <p>In 2023, the value of the residential property is $500,000. You are 1 of 2 owners, who equally share ownership as indicated in the land registration system.</p>
