--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -583,7 +583,32 @@ Income tax rates for individuals</h1>
 		<p>Form 428 within your respective province or territory’s income tax package, is used to calculate your provincial or territorial tax. Provincial or territorial non-refundable tax credits are also calculated on Form 428.</p>
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">T1 Income tax packages</a></p>
 		<br>
-<p>You should calculate the federal tax first, then calculate your provincial or territorial tax. By adding these 2 amounts together, you will get your <strong>combined tax rate</strong>.</p>
+
+		 <div class="row mrgn-bttm-lg">
+		  <div class="col-sm-6 col-md-5">
+		<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your <strong>ownership percentage</strong> of the property.</p></div>
+		  <div class="col-sm-6 col-md-7">
+			  	  <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
+	<li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span><span class="wb-inv"></span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x"></span></span><span class="mrgn-tp-0 text-muted h5">Value of the property</span></li>		  
+			  
+
+
+<li><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times</span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><span class="fas fa-percentage fa-stack-1x"></span></span><span class="mrgn-tp-0 text-muted h5">Underused Housing Tax rate (1%)</span> </li>
+<li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times</span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><span class="fas fa-percentage fa-stack-1x"></span></span><span class="mrgn-tp-0 text-muted h5">Ownership amount</span></li>			  
+			  
+<li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success pull-left"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span><span class="mrgn-tp-0 text-muted h5">Underused Housing Tax amount</span></span></li>
+</ul>
+	    </div>
+	  </div>
+		
+		
+		
+		
+		
+		
+		
+		
+		<p>You should calculate the federal tax first, then calculate your provincial or territorial tax. By adding these 2 amounts together, you will get your <strong>combined tax rate</strong>.</p>
 
 
 		
