--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -589,7 +589,7 @@ Income tax rates for individuals</h1>
 		<p>You should calculate the federal tax first, then calculate your provincial or territorial tax.</p> 
 			  <p></p>By adding these 2 amounts together, you will get your <strong>combined tax rate</strong>.</p></div>
 		  <div class="col-sm-6 col-md-7">
-			  <p>To calculate what you owe: </p>
+			  <p>To calculate the tax: </p>
 			  	  <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
       <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Taxable income</span></li>
       <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-minus fa-lg"></span><span class="wb-inv">minus </span></span><span class="text-muted h5">Base amount</span> </li>
