--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -286,9 +286,9 @@ Income tax rates for individuals</h1>
     
 
     
-        <p>[The Government of Canada sets the federal income tax rates for individuals. Each province and territory determines their own income tax rates.]</p>
-	<p>[Provincial or territorial income tax rates apply in addition to federal income tax rates.]</p>
-<p>[Determine the tax you may owe by identifying your taxable income threshold (tax bracket), using the different tax rates based on your location, and calculating your combined tax rate.]</p>
+        <p>The Government of Canada sets the federal income tax rates for individuals. Each province and territory determines their own income tax rates.</p>
+	<p>Provincial or territorial income tax rates apply <strong>in addition to</strong> federal income tax rates.</p>
+<p>Determine the total tax you may owe by identifying your taxable income threshold (tax bracket), using the different tax rates based on your location, and calculating your combined tax rate.]</p>
 
 </div>
 <div class="mwsinpagetoc section">
@@ -587,7 +587,7 @@ Income tax rates for individuals</h1>
 		 <div class="row mrgn-bttm-lg">
 		  <div class="col-sm-6 col-md-5">
 		<p>You should calculate the federal tax first, then calculate your provincial or territorial tax.</p> 
-			  <p></p>By adding these 2 amounts together, you will get your <strong>combined tax rate</strong>.</p></div>
+			  <p></p>By adding these 2 amounts together, you will get your <strong>combined tax rate</strong>, which is the total tax you may owe.</p></div>
 		  <div class="col-sm-6 col-md-7">
 			  <p>To calculate the tax: </p>
 			  	  <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
