--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -289,7 +289,7 @@ Income tax rates for individuals</h1>
         <p>The Government of Canada sets the federal income tax rates for individuals. Each province and territory determines their own income tax rates.</p>
 	<p>Provincial or territorial income tax rates apply <strong>in addition to</strong> federal income tax rates.</p>
 <p>Determine the total tax you may owe by identifying your taxable income threshold (tax bracket), using the different tax rates based on your location, and calculating your combined tax rate.</p>
-
+  <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
 </div>
 <div class="mwsinpagetoc section">
 
@@ -350,7 +350,7 @@ Income tax rates for individuals</h1>
 
     
         <h2 id="toc1">2023 - Federal rates</h2>
-   <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
+   <p>[Basic personal amount?]</p>
     <br>
 
 
