--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -371,6 +371,7 @@ Income tax rates for individuals</h1>
     
         <h2 id="toc2">2023 - Provincial and territorial rates</h2>
    <p>Provincial and territorial tax rates vary across Canada.</p>
+	<p>Your provincial or territorial tax rate is determined by the location in which you are living on December 31 of the tax year.</p>
 	<br>
     
 
