--- a/fhsa/v4/participate.html
+++ b/fhsa/v4/participate.html
@@ -65,7 +65,7 @@
 	
 
 </div>
-            <h2>On this page</h2>
+            <h2 class="h3">On this page</h2>
             <ul>
                <li><a href="#h-1">How much you can contribute or transfer</a></li>
                <li><a href="#h-2">Carry forward unused contribution room up to $8,000</a></li>
