--- a/fhsa/v4/deductions.html
+++ b/fhsa/v4/deductions.html
@@ -65,7 +65,7 @@
 	
 
 
-            <h2>On this page</h2>
+            <h2 class="h3">On this page</h2>
             <ul>
                <li><a href="#h-1">Contributions you can deduct in a year</a></li>
 		                   <li><a href="#h-2">Contributions that cannot be deducted</a></li>
