--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -172,7 +172,7 @@
 
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">Tax consequences of removing property from your FHSAs</a></li>
+               <li><a href="#h-1">Withdrawals and transfer without tax consequences</a></li>
 		                   <li><a href="#h-2">Making qualifying withdrawals from your FHSAs</a></li>
 
                <li><a href="#h-3">Making taxable withdrawals from your FHSAs</a></li>
@@ -183,7 +183,7 @@
 
             </ul>
 
-    <h2 id="h-1">Tax consequences of removing property from your FHSAs</h2>
+    <h2 id="h-1">Withdrawals and transfer without tax consequences</h2>
 		 <p>A withdrawal or transfer from an FHSA <strong>is not required to be included</strong> in your income if it is:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
