--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -175,7 +175,7 @@
                <li><a href="#h-1">Withdrawals and transfer without tax consequences</a></li>
 		  <ul>                 <li><a href="#h-1-1">Making qualifying withdrawals from your FHSAs</a></li>
 					 <li><a href="#h-1-2">Making designated withdrawals or transfers from your FHSAs</a></li>
-		    		         <li><a href="#h-1-3">Transfers from your FHSAs to your RRSPs or RRIFs</a></li>
+		    		         <li><a href="#h-1-3">Transfers from your FHSAs to your RRSPs or RRIFs</a></li></ul>
                <li><a href="#h-2">Making taxable withdrawals from your FHSAs</a></li>
 		                  
 		    		                   <li><a href="#h-6">Transferring amounts on the breakdown of a marriage or common-law partnership</a></li>
