--- a/fhsa/v4/deductions.html
+++ b/fhsa/v4/deductions.html
@@ -69,7 +69,7 @@
             <ul>
                <li><a href="#h-1">Contributions you can deduct in a year</a></li>
 		                   <li><a href="#h-2">Contributions that cannot be deducted</a></li>
-		                   <li><a href="#h-3">How much can you deduct</a></li>
+		                   
 
 		                   <li><a href="#h-5">Deductions when you have an excess FHSA amount</a></li>
 
@@ -193,7 +193,7 @@
 	 <h4>Unused FHSA contributions</h4>
 <p>Generally, the amounts that you contributed to your FHSAs but could not or decided not to claim as an FHSA deduction on your income tax and benefit return can be carried forward, even beyond the closure of your FHSAs. </p>
 	<p>If you have an excess FHSA amount, the deductibility of your unused FHSA contributions that can be carried forward may be impacted.</p>
-
+<p>For more information, go to <a href="deductions.html#h-5">Deductions when you have an excess FHSA amount</a></p>
 	
 	<h2 id="h-2">Contributions that cannot be deducted</h2>	
 		 <p>You cannot deduct the following contributions:</p>
