--- a/fhsa/v4/deductions.html
+++ b/fhsa/v4/deductions.html
@@ -131,7 +131,7 @@
         
     </ul>
 
-	 <h3>How much can you deduct</h3>
+	 <h3 id="h-1-1">How much can you deduct</h3>
 	<p>After you open your first FHSA, the total of your unused FHSA contributions available to be deducted in a future year will be provided to you on your notice of assessment or reassessment. <span class="label label-info">More information about these notices will be available at a later date.</span></p>
 <details> <summary>How to calculate your maximum deductible amount</summary>
 <p>The maximum amount that you may deduct in respect of your FHSA contributions is the <strong>lesser</strong> of:</p>
@@ -411,7 +411,7 @@
     
         <h2 id="h-5">Deductions when you have an excess FHSA amount</h2>
 	<p>You will have an excess FHSA amount if the total of your contributions to your FHSAs and transfers from your RRSPs to your FHSAs for the year are more than your FHSA participation room for the year.</p>
-<p>If you have an excess FHSA amount, the deductibility of the amounts carried forward may be impacted. In order to determine the actual amount of FHSA deduction that you may claim when you have an excess FHSA amount, go to <a href="deductions.html#h_2">How much can you deduct</a>.</p>
+<p>If you have an excess FHSA amount, the deductibility of the amounts carried forward may be impacted. In order to determine the actual amount of FHSA deduction that you may claim when you have an excess FHSA amount, go to <a href="deductions.html#h-1-1">How much can you deduct</a>.</p>
 
 	<p>If you have made both contributions and transfers to your FHSAs which created an excess FHSA amount, the deductibility of your contributions may be impacted.</p>
 </div>
