--- a/fhsa/v4/close.html
+++ b/fhsa/v4/close.html
@@ -65,7 +65,7 @@
               <h2 class="h3">On this page</h2>
             <ul>
                <li><a href="#h-1">When to close an FHSA</a></li>
-               <li><a href="#h-2">When your FHSA is considered closed</a></li>
+               <li><a href="#h-2">How to close your FHSA</a></li>
 
               
             </ul>
@@ -212,7 +212,7 @@
 
 </div>
 
-		  <h2 id="h-2">When your FHSA is considered closed</h2>
+		  <h2 id="h-2">How to close your FHSA</h2>
 		 <p>Content needed</p>
 
 		 <div class="mwsbodytext text parbase section">
