--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -584,11 +584,18 @@ Income tax rates for individuals</h1>
 		<p>Form 428 within your respective province or territory’s income tax package, is used to calculate your provincial or territorial tax. Provincial or territorial non-refundable tax credits are also calculated on Form 428.</p>
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">T1 Income tax packages</a></p>
 		<br>
-
+<p>You should calculate the federal tax first, then calculate your provincial or territorial tax.</p> 
 		 <div class="row mrgn-bttm-lg">
 		  <div class="col-sm-6 col-md-5">
-		<p>You should calculate the federal tax first, then calculate your provincial or territorial tax.</p> 
-			  <p></p>By adding these 2 amounts together, you will get your <strong>combined tax rate</strong>, which is the total tax you may owe.</p></div>
+		<p>To calculate the tax: 
+			<ul><li>subtract the base amount from the taxable income</li></ul> 
+
+<ul><li>multiply that result by the tax rate</li></ul> 
+<ul><li>add the tax to that result</li></ul> 
+<p>The final result is your tax amount owed</p>
+
+			  
+			  <p>You must add your federal tax amount and provinical or territorial tax amount together to get your <strong>combined tax rate</strong>. This is the total tax you may owe.</p></div>
 		  <div class="col-sm-6 col-md-7">
 			  <p>To calculate the tax: </p>
 			  	  <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
