--- a/fhsa/v4/index.html
+++ b/fhsa/v4/index.html
@@ -105,8 +105,8 @@
    
 	      <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="death.html">Death and FHSAs</a></h3>
-          <p>What happens to an FHSA when the FHSA holder dies, including tax implications for the deceased holder, survivor, and other FHSA beneficiaries</p>
+          <h3><a href="death.html">Life events and FHSAs</a></h3>
+          <p>What happens to an FHSA when the FHSA holder dies, ends a marriage or common-law relationship, or becomes a non-resident of Canada</p>
         </section>	    
 	    </div>
 	  <div class="col-lg-4 col-md-6">
