--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -288,7 +288,7 @@ Income tax rates for individuals</h1>
     
         <p>The Government of Canada sets the federal income tax rates for individuals. Each province and territory determines their own income tax rates.</p>
 	<p>Provincial or territorial income tax rates apply <strong>in addition to</strong> federal income tax rates.</p>
-<p>Determine the total tax you may owe by identifying your taxable income threshold (tax bracket), using the different tax rates based on your location, and calculating your combined tax rate.</p>
+<p>Determine the total tax you will pay by identifying your taxable income threshold (tax bracket), using the different tax rates based on your location, and calculating your combined tax rate.</p>
   <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
 </div>
 <div class="mwsinpagetoc section">
@@ -591,13 +591,11 @@ Income tax rates for individuals</h1>
 			<ul><li>subtract the base amount from the taxable income</li></ul> 
 
 <ul><li>multiply that result by the tax rate</li></ul> 
-<ul><li>add the tax to that result</li></ul> 
-<p>The final result is your tax amount owed</p>
+<ul><li>add that result to the tax</li></ul> 
 
 			  
-			  <p>You must add your federal tax amount and provinical or territorial tax amount together to get your <strong>combined tax rate</strong>. This is the total tax you may owe.</p></div>
+			  <p>You must add your federal tax amount and provinical or territorial tax amounts together to get your <strong>combined tax rate</strong>. This is the total tax you will pay for the tax year.</p></div>
 		  <div class="col-sm-6 col-md-7">
-			  <p>To calculate the tax: </p>
 			  	  <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
       <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Taxable income</span></li>
       <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-minus fa-lg"></span><span class="wb-inv">minus </span></span><span class="text-muted h5">Base amount</span> </li>
