--- a/fhsa/v4/index.html
+++ b/fhsa/v4/index.html
@@ -105,7 +105,7 @@
    
 	      <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="death.html">Life events and FHSAs</a></h3>
+          <h3><a href="lifeevents.html">Life events and FHSAs</a></h3>
           <p>What happens to an FHSA when the FHSA holder dies, ends a marriage or common-law relationship, or becomes a non-resident of Canada</p>
         </section>	    
 	    </div>
