--- a/fhsa/v4/lifeevents.html
+++ b/fhsa/v4/lifeevents.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Participating in your FHSAs - First Home Savings Account (FHSA) - Canada.ca</title>
+         <title>Life events and your FHSAs - First Home Savings Account (FHSA) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -58,8 +58,8 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
           
-            <h1 property="name" id="wb-cont" class="gc-thickline">Participating in your FHSAs</h1>
-            <p>Learn how much you can contribute or transfer into your First Home Savings Account (FHSA).</p>
+            <h1 property="name" id="wb-cont" class="gc-thickline">Life events and your FHSAs</h1>
+            <p>Learn how important life events will affect your First Home Savings Account (FHSA).</p>
 		
 
 	
