--- a/maire/mockups.html
+++ b/maire/mockups.html
@@ -335,7 +335,7 @@
 				<p>For opening an FHSA, you are a first-time home buyer if</p>
 
 <div class="cnjnctn-type-and cnjnctn-xs">
-<div class="cnjnctn-col">
+<div class="cnjnctn-col-40">
 
 <p>You did not live in a qualifying home that you owned or jointly owned </p>
 	  <ul class="cnjnctn-type-or mrgn-tp-0">
@@ -346,7 +346,7 @@
                                     <li class="cnjnctn-col">
                                        in the previous 4 calendar years </li></ul>
 </div>
-<div class="cnjnctn-col">
+<div class="cnjnctn-col-40">
 
 <p>Your spouse or common-law partner did not live in a qualifying home that they owned or jointly owned</p>
 	 <ul class="cnjnctn-type-or mrgn-tp-0">
