--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -277,6 +277,7 @@
 	  
  <section>
 	 <section>
+		 <fieldset class="gc-chckbxrdio">
                   <ul class="checkbox-lg checkbox-zebra">
                      <li class="checkbox">
                         <input type="checkbox" id="eg1" class="action-checkbox cb-dmm">
@@ -386,6 +387,7 @@
  
 
  <details>
+ </fieldset>
                     <summary>Example: Opening an FHSA the year you turn 18</summary>
                     <div class="mwsbodytext text parbase section">
     
