--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -379,15 +379,18 @@ Income tax rates for individuals</h1>
         
 	<ul>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
-		  <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
+		  <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
     </ul>
 </div>
+
+	
 <div id="alberta" class="province-display hidden">
     <div data-json-replace="#[income-tax-rates]/alberta/variations/2023/value"></div>
 	
-</div>
-<div id="britishColumbia" class="province-display hidden">
+	<div id="britishColumbia" class="province-display hidden">
     <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2023/value"></div>
+</div>
+
 
 
 
